--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.exam_17_2">
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,9 +13,11 @@
             android:name=".MyReceiverSMS"
             android:enabled="true"
             android:exported="true">
-            <intent-filter android:priority="100">
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+<!-- Будем регистрировать broadcast receiver программно (в коде)
+            <intent-filter android:priority="1000">
+                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
+-->
         </receiver>
 
         <activity
